--- a/.github/workflows/ci-arm64ec-wine.yml
+++ b/.github/workflows/ci-arm64ec-wine.yml
@@ -1,4 +1,4 @@
-name: Wine 11.1 Staging ARM64 for Ludashi CMOD 2.8.1
+name: Wine 11.1 Staging ARM64 Production Build
 
 on:
   push:
@@ -6,165 +6,108 @@ on:
   workflow_dispatch:
 
 jobs:
-  build_wine:
-    runs-on: ubuntu-22.04  # Glibc 2.35
-
-    env:
-      LLVM_MINGW_URL: "https://github.com/mstorsjo/llvm-mingw/releases/download/20251216/llvm-mingw-20251216-ucrt-ubuntu-22.04-x86_64.tar.xz"
-      WINE_TAG: "wine-11.1"
-      STAGING_TAG: "v11.1"
-      FSR_PATCH: "https://raw.githubusercontent.com/GloriousEggroll/proton-ge-custom/master/patches/wine-hotfixes/staging/proton-fshack-staging.patch"
-
+  build:
+    runs-on: ubuntu-22.04
+    
     steps:
       - uses: actions/checkout@v4
 
-      - name: Setup Build Environment
+      - name: Setup Environment
         run: |
           sudo dpkg --add-architecture arm64
-          sudo rm -f /etc/apt/sources.list /etc/apt/sources.list.d/*
-          
-          cat <<'EOF' | sudo tee /etc/apt/sources.list
+          sudo tee /etc/apt/sources.list <<'EOF'
           deb [arch=amd64] http://archive.ubuntu.com/ubuntu jammy main restricted universe multiverse
           deb [arch=amd64] http://archive.ubuntu.com/ubuntu jammy-updates main restricted universe multiverse
           deb [arch=arm64] http://ports.ubuntu.com/ubuntu-ports jammy main restricted universe multiverse
           deb [arch=arm64] http://ports.ubuntu.com/ubuntu-ports jammy-updates main restricted universe multiverse
           EOF
           
-          sudo apt-get update -qq
-          sudo apt-get install -y --no-install-recommends \
+          sudo apt update -qq
+          sudo apt install -y \
             build-essential gcc-aarch64-linux-gnu g++-aarch64-linux-gnu \
-            git flex bison pkg-config python3-minimal autoconf libtool \
-            libfreetype-dev{,:arm64} libfontconfig1-dev:arm64 \
-            libx11-dev{,:arm64} libxext-dev:arm64 libxrandr-dev:arm64 \
-            libxrender-dev:arm64 libxi-dev:arm64 libxinerama-dev:arm64 \
-            libxcursor-dev:arm64 libxcomposite-dev:arm64 libxfixes-dev:arm64 \
-            libxxf86vm-dev:arm64 libvulkan-dev:arm64 libxkbcommon-dev:arm64 \
-            libglib2.0-dev:arm64 libgnutls28-dev:arm64 libpcap-dev:arm64 \
-            libpulse-dev:arm64 libdbus-1-dev:arm64 libudev-dev:arm64 \
-            libsdl2-dev:arm64 libunwind-dev:arm64
+            git flex bison autoconf libtool pkg-config python3-minimal wget \
+            libfreetype-dev{,:arm64} libfontconfig1-dev:arm64 libx11-dev{,:arm64} \
+            libxext-dev:arm64 libxrandr-dev:arm64 libxrender-dev:arm64 libxi-dev:arm64 \
+            libxinerama-dev:arm64 libxcursor-dev:arm64 libxcomposite-dev:arm64 \
+            libxfixes-dev:arm64 libxxf86vm-dev:arm64 libvulkan-dev:arm64 \
+            libxkbcommon-dev:arm64 libglib2.0-dev:arm64 libgnutls28-dev:arm64 \
+            libpcap-dev:arm64 libpulse-dev:arm64 libdbus-1-dev:arm64 \
+            libudev-dev:arm64 libsdl2-dev:arm64 libunwind-dev:arm64
 
-      - name: Setup LLVM MinGW
+      - name: Get LLVM MinGW
         run: |
-          wget -q "$LLVM_MINGW_URL" -O llvm.tar.xz
-          tar xf llvm.tar.xz
-          mv llvm-mingw-* llvm-mingw
-          echo "$PWD/llvm-mingw/bin" >> $GITHUB_PATH
+          wget -qO- https://github.com/mstorsjo/llvm-mingw/releases/download/20251216/llvm-mingw-20251216-ucrt-ubuntu-22.04-x86_64.tar.xz | tar xJ
+          echo "$PWD/llvm-mingw-20251216-ucrt-ubuntu-22.04-x86_64/bin" >> $GITHUB_PATH
 
-      - name: Clone Wine Sources
+      - name: Clone Wine
         run: |
-          git clone --depth 1 -b $WINE_TAG https://gitlab.winehq.org/wine/wine.git wine-src
-          git clone --depth 1 -b $STAGING_TAG https://gitlab.winehq.org/wine/wine-staging.git wine-staging
+          git clone --depth 1 -b wine-11.1 https://gitlab.winehq.org/wine/wine.git wine
+          git clone --depth 1 -b v11.1 https://gitlab.winehq.org/wine/wine-staging.git staging
 
-      - name: Apply Patches
+      - name: Patch
         run: |
-          set +e
-          cd wine-staging
-          ./staging/patchinstall.py DESTDIR=../wine-src --all --no-autoconf
-          cd ../wine-src
-          wget -q -O fsr.patch "$FSR_PATCH"
-          patch -p1 --fuzz=3 < fsr.patch
+          cd staging && ./staging/patchinstall.py DESTDIR=../wine --all --no-autoconf || true
+          cd ../wine
+          wget -qO fsr.patch https://raw.githubusercontent.com/GloriousEggroll/proton-ge-custom/master/patches/wine-hotfixes/staging/proton-fshack-staging.patch
+          patch -p1 --fuzz=3 < fsr.patch || true
           autoreconf -fiv
-          ./tools/make_requests
-          exit 0
 
-      - name: Build Native Tools
+      - name: Build Host Tools
         run: |
-          mkdir tools-build && cd tools-build
-          ../wine-src/configure --enable-win64 --disable-tests
-          make -j$(nproc) tools/winebuild/winebuild tools/widl/widl \
-            tools/wrc/wrc tools/wmc/wmc tools/winegcc/winegcc
+          mkdir host && cd host
+          ../wine/configure --enable-win64 --disable-tests
+          make -j$(nproc) __tooldeps__
 
-      - name: Configure ARM64 Build
+      - name: Build ARM64
         run: |
-          mkdir wine-build && cd wine-build
-          export PKG_CONFIG_PATH=/usr/lib/aarch64-linux-gnu/pkgconfig
-          export CFLAGS="-O3 -march=armv8.2-a+fp16+dotprod -mtune=cortex-a76 -fno-plt"
-          export CROSSCFLAGS="$CFLAGS -g0 -mstrict-align"
-          
-          ../wine-src/configure \
+          mkdir build && cd build
+          PKG_CONFIG_PATH=/usr/lib/aarch64-linux-gnu/pkgconfig \
+          CFLAGS="-O3 -march=armv8.2-a+fp16+dotprod -mtune=cortex-a76" \
+          CROSSCFLAGS="-O3 -march=armv8.2-a+fp16+dotprod -mtune=cortex-a76 -mstrict-align" \
+          ../wine/configure \
             --host=aarch64-linux-gnu \
-            --enable-win64 \
-            --with-wine-tools=../tools-build \
+            --with-wine-tools=../host \
             --with-mingw=clang \
-            --prefix="" \
+            --enable-win64 \
+            --prefix=/usr \
+            --libdir=/usr/lib \
             --disable-tests \
-            --with-x \
-            --with-vulkan \
-            --with-freetype \
-            --without-wayland \
-            --without-gstreamer \
-            --without-cups \
-            --without-sane \
-            --without-oss
-
-      - name: Build Wine
-        run: |
-          cd wine-build
+            --with-x --with-vulkan --with-freetype \
+            --without-wayland --without-gstreamer --without-cups --without-sane --without-oss
           make -j$(nproc)
 
-      - name: Create WCP Package
+      - name: Package WCP
         run: |
-          cd wine-build
+          cd build
+          DESTDIR=$PWD/pkg make install-lib
+          cd pkg/usr
           
-          WCP_DIR="$GITHUB_WORKSPACE/wcp-root"
-          mkdir -p "$WCP_DIR"
-          
-          make install DESTDIR="$WCP_DIR" STRIP=aarch64-linux-gnu-strip
-          
-          cd "$WCP_DIR"
-          
-          # Симлинк wine -> wine64
-          cd bin && ln -sf wine64 wine && cd ..
-          
-          # Права
+          ln -sf wine64 bin/wine
           find bin -type f -exec chmod +x {} +
           find lib -name "*.so*" -exec chmod +x {} +
           
-          # info.json
-          cat > info.json <<'INFOJSON'
+          cat > info.json <<'JSON'
           {
-            "name": "Wine-11.1-Staging-S8G1-Ludashi",
+            "name": "Wine-11.1-Staging-S8G1",
             "version": "11.1",
             "arch": "arm64",
-            "type": "wine",
             "variant": "staging",
             "glibc": "2.35",
-            "optimization": "armv8.2-a+fp16+dotprod cortex-a76",
             "target": "snapdragon-8plus-gen1",
-            "ludashi": "cmod-2.8.1",
-            "author": "GitHub-CI",
-            "description": "Wine 11.1 Staging + FSR optimized for Snapdragon 8+ Gen 1",
-            "features": ["staging", "fsr", "fsync", "esync"],
-            "build_date": "2025-01-26"
+            "features": ["staging","fsr","fsync","esync"]
           }
-          INFOJSON
+          JSON
           
-          # env.sh
-          cat > env.sh <<'ENVSH'
+          cat > env.sh <<'SH'
           #!/bin/sh
-          export WINEDEBUG=-all
-          export WINEESYNC=1
-          export WINEFSYNC=1
-          export WINE_FULLSCREEN_FSR=1
-          export WINE_CPU_TOPOLOGY=8:0
-          ENVSH
+          export WINEDEBUG=-all WINEESYNC=1 WINEFSYNC=1 WINE_FULLSCREEN_FSR=1
+          SH
           chmod +x env.sh
           
-          # Создаём WCP архив БЕЗ обёртки
-          tar -cJf "$GITHUB_WORKSPACE/wine-11.1-staging-s8g1-ludashi.wcp" \
-            -C "$WCP_DIR" \
-            bin lib share info.json env.sh
-          
-          echo "=== WCP Structure (First 25 Files) ==="
-          tar -tJf "$GITHUB_WORKSPACE/wine-11.1-staging-s8g1-ludashi.wcp" | head -25
-          
-          echo ""
-          echo "=== Archive Info ==="
-          ls -lh "$GITHUB_WORKSPACE/wine-11.1-staging-s8g1-ludashi.wcp"
+          tar -cJf $GITHUB_WORKSPACE/wine-s8g1.wcp bin lib share info.json env.sh
+          tar -tJf $GITHUB_WORKSPACE/wine-s8g1.wcp | head -30
 
-      - name: Upload WCP Artifact
-        uses: actions/upload-artifact@v4
+      - uses: actions/upload-artifact@v4
         with:
-          name: wine-11.1-staging-s8g1-ludashi
-          path: wine-11.1-staging-s8g1-ludashi.wcp
-          compression-level: 0
+          name: wine-11.1-staging-s8g1
+          path: wine-s8g1.wcp
